# mergisheim

./: .gitignore  .mergify.yml  README.md  dummy_trigger  pyproject.toml  squash-test.txt  trigger
.circleci/: config.yml
.github/workflows/: conflicts_resolver.yaml  test_release.yml
mergisheim/tests/: test_circle_ci.py
poetry_conflicts_generator/: poetry_conflict_generator.py  utils.py
