[tool.poetry]
name = "mergisheim"
version = "0.1.0"
description = ""
authors = ["leoecrepont <leo.ecrepont@mergify.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"
pygithub = "^1.59.1"
pyyaml = "6.0.0"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
