[tool.poetry]
name = "mergisheim"
version = "0.1.0"
description = ""
authors = ["leoecrepont <leo.ecrepont@mergify.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
pygithub = "^2.0.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
first = "^2.0.2"
anys = "^0.3.0"
jinja2 = "^3.1.0"
pytest = "^8.3.2"

#[tool.poetry.scripts]
#test = "pytest"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
